# lore-git-md-helper

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
prompts/: git-daily-digest.md  git-digest-email.md  git-periodic-digest.md  git-project-context.md  git-thread-summary.md
src/: ai_backend.rs  batch_import.rs  cached_reader.rs  cat_file.rs  date_util.rs  datekey.rs  digestive.rs  fast_import.rs  git_util.rs  import_writer.rs  lib.rs  lore_link.rs  msgid_map.rs  notes_import.rs  periodic_digest.rs  rag_db.rs  rag_git.rs  rag_ingest.rs  rag_parse.rs  rag_query.rs  source_reader.rs  summarize.rs  symlink.rs  thread.rs  thread_file.rs
