[package]
name = "lore-git-md-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
mail-parser = "0.11"
html2text = "0.16"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tempfile = "3"
sha1_smol = "1.0"
time = { version = "0.3.47", features = ["formatting", "parsing"] }

[features]
test-support = []

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
