[package]
name = "lore-git-md-helper"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
mail-parser = "0.11"
html2text = "0.16"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tempfile = "3"
sha1_smol = "1.0"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled", "vtab"] }
regex = "1"

[features]
test-support = []

[dev-dependencies]
wiremock = "0.6"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[profile.release]
lto = true
codegen-units = 1
